{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 145,
  "lineage": "f67aa77a-9dad-2834-5f08-30b49f2cd4a8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "assign_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-091fde23a9a015290",
            "domain": "vpc",
            "id": "eipalloc-82884cb2",
            "instance": "i-07a759c1a43c3ed0b",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0f75e09bc66f87a54",
            "private_dns": "ip-192-168-20-22.eu-central-1.compute.internal",
            "private_ip": "192.168.20.22",
            "public_dns": "ec2-3-68-172-134.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.68.172.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "tags_all": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.jager",
            "aws_key_pair.jager_ssh_key",
            "aws_security_group.jager_sg",
            "aws_subnet.jager_subnet",
            "aws_vpc.jager_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f22f6155d6d92c5",
            "arn": "arn:aws:ec2:eu-central-1:482720962971:instance/i-07a759c1a43c3ed0b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a759c1a43c3ed0b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "New",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f75e09bc66f87a54",
            "private_dns": "ip-192-168-20-22.eu-central-1.compute.internal",
            "private_ip": "192.168.20.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b351f33819c0855f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0707388b4c73ab68c",
            "tags": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "tags_all": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-012a222dc15fb8907"
            ]
          },
          "dependencies": [
            "aws_key_pair.jager_ssh_key",
            "aws_security_group.jager_sg",
            "aws_subnet.jager_subnet",
            "aws_vpc.jager_vpc",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jager_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:482720962971:internet-gateway/igw-007b937c5dde01c7b",
            "id": "igw-007b937c5dde01c7b",
            "owner_id": "482720962971",
            "tags": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "tags_all": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "vpc_id": "vpc-0108ee1a1fffdd832"
          },
          "dependencies": [
            "aws_vpc.jager_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jager_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:482720962971:route-table/rtb-073985bf1275ff9f1",
            "id": "rtb-073985bf1275ff9f1",
            "owner_id": "482720962971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-007b937c5dde01c7b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "tags_all": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "vpc_id": "vpc-0108ee1a1fffdd832"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jager_gateway",
            "aws_vpc.jager_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "table_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faba583f48710aec",
            "route_table_id": "rtb-073985bf1275ff9f1",
            "subnet_id": "subnet-0707388b4c73ab68c"
          },
          "dependencies": [
            "aws_internet_gateway.jager_gateway",
            "aws_route_table.jager_route_table",
            "aws_subnet.jager_subnet",
            "aws_vpc.jager_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jager_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:482720962971:security-group/sg-012a222dc15fb8907",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012a222dc15fb8907",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access to the Instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow tcp port 3000 access to the Instance",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "482720962971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "tags_all": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "timeouts": null,
            "vpc_id": "vpc-0108ee1a1fffdd832"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jager_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jager_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:482720962971:subnet/subnet-0707388b4c73ab68c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "192.168.20.0/25",
            "id": "subnet-0707388b4c73ab68c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482720962971",
            "tags": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "tags_all": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "vpc_id": "vpc-0108ee1a1fffdd832"
          },
          "dependencies": [
            "aws_vpc.jager_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jager_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:482720962971:vpc/vpc-0108ee1a1fffdd832",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.20.0/24",
            "default_network_acl_id": "acl-0551da9481748f9c8",
            "default_route_table_id": "rtb-0a63ca80ad20c7a04",
            "default_security_group_id": "sg-0df8a4ed1ade1aed1",
            "dhcp_options_id": "dopt-ac5fcac6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0108ee1a1fffdd832",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a63ca80ad20c7a04",
            "owner_id": "482720962971",
            "tags": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            },
            "tags_all": {
              "Name": "Tigran_hambardzumyan",
              "ResourceName": "Tigran_hambardzumyan"
            }
          }
        }
      ]
    }
  ]
}